Ajout à l'api des requêtes par ID de attraction et type
fixe : la liste des type de pins n'était pas chargé dynamiquement depuis la base de données dans la page contribute
